<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8185A1"
    tools:context=".RegistrationPage">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="229dp"
            android:layout_height="119dp"
            android:layout_marginTop="51dp"
            android:layout_marginBottom="95dp"
            app:layout_constraintBottom_toTopOf="@+id/registerSociety"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/l" />

        <Button
            android:id="@+id/memberRegister"
            android:layout_width="214dp"
            android:layout_height="60dp"
            android:layout_marginBottom="273dp"
            android:background="@drawable/mybutton"
            android:text="@string/member_registration"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/registerSociety"
            android:layout_width="224dp"
            android:layout_height="51dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/mybutton"
            android:text="@string/register_society"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="53dp"
            android:layout_height="35dp"
            android:layout_marginBottom="31dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#151212"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/memberRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSociety" />

</androidx.constraintlayout.widget.ConstraintLayout>