<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8185A1"

    tools:context=".LoginPage">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="211dp"
        android:layout_height="0dp"
        android:background="@drawable/mybutton"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:textSize="18sp"

        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#150101"

        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#7E0E0D0D"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/password"
        android:drawablePadding="12dp"
        android:textSize="18sp"

        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="#0B0000"
        android:textColorHighlight="#632929"
        android:textColorHint="#7E0E0D0D"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="211dp"
        android:layout_height="0dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/mybutton"
        android:textSize="18sp"

        android:text="@string/registration"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="#00FDFCFC"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="225dp"
        android:layout_height="116dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/l" />
</androidx.constraintlayout.widget.ConstraintLayout>